force-app/main/default/objects/Contact/fields/SatoriTags__c.field-meta.xml
<CustomField>
    <fullName>SatoriTags__c</fullName>
    <label>タグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>