force-app/main/default/objects/Contact/fields/SatoriUrl__c.field-meta.xml
<CustomField>
    <fullName>SatoriUrl__c</fullName>
    <label>SATORI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>