force-app/main/default/objects/Contact/fields/tags__c.field-meta.xml
<CustomField>
    <fullName>tags__c</fullName>
    <label>タグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>